bugfix/align top proposals

--- a/src/components/Proposals/TopProposalCardList/TopProposalCardList.scss
+++ b/src/components/Proposals/TopProposalCardList/TopProposalCardList.scss
@@ -122,6 +122,9 @@
 				font-weight: 500;
 				font-size: 18px;
 				line-height: 150%;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 
 				@media screen and (min-width: 1280px) {
 					font-size: 16px;
